--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -207,11 +207,12 @@ light:
     show: true
     type: client
     period: 10ms
+    visualizer_closes_echomesh: false
 
     background: white
     layout: [16, 16]
     padding: [3, 3]
-    top_left: [0, 0]
+    top_left: [0,44]
     instrument:
       background: 0x606060
       border:
