Now the visualizer's position on the screen persists. https://github.com/rec/echomesh/issues/400

--- a/command/master/config.yml
+++ b/command/master/config.yml
@@ -2,3 +2,9 @@ network:
   client:
     start: true
     allow_reuse_address: true
+
+---
+light:
+  visualizer:
+    top_left: [114, 330]
+start: light1
