--- a/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj
+++ b/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj
@@ -129,6 +129,8 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\echomesh\audio\AudioController.cpp"/>
+    <ClCompile Include="..\..\echomesh\audio\MidiController.cpp"/>
     <ClCompile Include="..\..\echomesh\util\GetDevice.cpp"/>
     <ClCompile Include="..\..\echomesh\base\Config.cpp"/>
     <ClCompile Include="..\..\echomesh\base\Log.cpp"/>
@@ -136,11 +138,9 @@
     <ClCompile Include="..\..\echomesh\component\InstrumentGrid.cpp"/>
     <ClCompile Include="..\..\echomesh\component\LightingWindow.cpp"/>
     <ClCompile Include="..\..\echomesh\Main.cpp"/>
-    <ClCompile Include="..\..\echomesh\network\AudioController.cpp"/>
     <ClCompile Include="..\..\echomesh\network\LightController.cpp"/>
     <ClCompile Include="..\..\echomesh\network\LightReader.cpp"/>
     <ClCompile Include="..\..\echomesh\network\LineGetter.cpp"/>
-    <ClCompile Include="..\..\echomesh\network\MidiController.cpp"/>
     <ClCompile Include="..\..\echomesh\network\ReadThread.cpp"/>
     <ClCompile Include="..\..\echomesh\network\SocketLineGetter.cpp"/>
     <ClCompile Include="..\..\base64\base64.cpp"/>
@@ -1259,21 +1259,24 @@
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_video\juce_video.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\echomesh\audio\AudioController.h"/>
+    <ClInclude Include="..\..\echomesh\audio\MidiController.h"/>
+    <ClInclude Include="..\..\echomesh\audio\EnvelopeAudioSource.h"/>
+    <ClInclude Include="..\..\echomesh\audio\PlaybackAudioSource.h"/>
+    <ClInclude Include="..\..\echomesh\audio\Player.h"/>
     <ClInclude Include="..\..\echomesh\util\GetDevice.h"/>
+    <ClInclude Include="..\..\echomesh\util\Quit.h"/>
     <ClInclude Include="..\..\echomesh\base\Disallow.h"/>
     <ClInclude Include="..\..\echomesh\base\Config.h"/>
     <ClInclude Include="..\..\echomesh\base\Echomesh.h"/>
-    <ClInclude Include="..\..\echomesh\base\Quit.h"/>
     <ClInclude Include="..\..\echomesh\base\Runnable.h"/>
     <ClInclude Include="..\..\echomesh\component\InstrumentComponent.h"/>
     <ClInclude Include="..\..\echomesh\component\InstrumentGrid.h"/>
     <ClInclude Include="..\..\echomesh\component\LightingWindow.h"/>
-    <ClInclude Include="..\..\echomesh\network\AudioController.h"/>
     <ClInclude Include="..\..\echomesh\network\LightController.h"/>
     <ClInclude Include="..\..\echomesh\network\LightReader.h"/>
     <ClInclude Include="..\..\echomesh\network\LineGetter.h"/>
     <ClInclude Include="..\..\echomesh\network\LineQueue.h"/>
-    <ClInclude Include="..\..\echomesh\network\MidiController.h"/>
     <ClInclude Include="..\..\echomesh\network\ReadThread.h"/>
     <ClInclude Include="..\..\echomesh\network\SocketLineGetter.h"/>
     <ClInclude Include="..\..\base64\base64.h"/>
