--- a/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj.filters
+++ b/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj.filters
@@ -11,11 +11,11 @@
     <Filter Include="echomesh-client\echomesh\audio">
       <UniqueIdentifier>{9C29F809-DA72-1741-C809-A087501355AF}</UniqueIdentifier>
     </Filter>
-    <Filter Include="echomesh-client\echomesh\util">
-      <UniqueIdentifier>{308CBD36-D043-A694-1B23-DCB611B5A271}</UniqueIdentifier>
-    </Filter>
     <Filter Include="echomesh-client\echomesh\base">
       <UniqueIdentifier>{F27FA859-2203-C883-0F61-261D1D50036D}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="echomesh-client\echomesh\util">
+      <UniqueIdentifier>{308CBD36-D043-A694-1B23-DCB611B5A271}</UniqueIdentifier>
     </Filter>
     <Filter Include="echomesh-client\echomesh\component">
       <UniqueIdentifier>{C7967F7D-D1B2-4EEF-6E44-5BC9AFCC5F32}</UniqueIdentifier>
@@ -349,14 +349,14 @@
     <ClCompile Include="..\..\echomesh\audio\EnvelopeAudioSource.cpp">
       <Filter>echomesh-client\echomesh\audio</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\echomesh\util\GetDevice.cpp">
-      <Filter>echomesh-client\echomesh\util</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\echomesh\base\Config.cpp">
       <Filter>echomesh-client\echomesh\base</Filter>
     </ClCompile>
     <ClCompile Include="..\..\echomesh\base\Log.cpp">
       <Filter>echomesh-client\echomesh\base</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\echomesh\util\GetDevice.cpp">
+      <Filter>echomesh-client\echomesh\util</Filter>
     </ClCompile>
     <ClCompile Include="..\..\echomesh\component\InstrumentComponent.cpp">
       <Filter>echomesh-client\echomesh\component</Filter>
@@ -1683,16 +1683,13 @@
     <ClInclude Include="..\..\echomesh\audio\Player.h">
       <Filter>echomesh-client\echomesh\audio</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\echomesh\util\GetDevice.h">
-      <Filter>echomesh-client\echomesh\util</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\echomesh\util\Quit.h">
-      <Filter>echomesh-client\echomesh</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\echomesh\base\Disallow.h">
+    <ClInclude Include="..\..\echomesh\base\ArraySize.h">
       <Filter>echomesh-client\echomesh\base</Filter>
     </ClInclude>
     <ClInclude Include="..\..\echomesh\base\Config.h">
+      <Filter>echomesh-client\echomesh\base</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\echomesh\base\Disallow.h">
       <Filter>echomesh-client\echomesh\base</Filter>
     </ClInclude>
     <ClInclude Include="..\..\echomesh\base\Echomesh.h">
@@ -1700,6 +1697,12 @@
     </ClInclude>
     <ClInclude Include="..\..\echomesh\base\Runnable.h">
       <Filter>echomesh-client\echomesh\base</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\echomesh\util\GetDevice.h">
+      <Filter>echomesh-client\echomesh\util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\echomesh\util\Quit.h">
+      <Filter>echomesh-client\echomesh</Filter>
     </ClInclude>
     <ClInclude Include="..\..\echomesh\component\InstrumentComponent.h">
       <Filter>echomesh-client\echomesh\component</Filter>
