--- a/code/cpp/Builds/Linux/Makefile
+++ b/code/cpp/Builds/Linux/Makefile
@@ -51,6 +51,7 @@ DEPFLAGS := $(if $(word 2, $(TARGET_ARCH)), , -MMD)
 OBJECTS := \
   $(OBJDIR)/base64_1eb4a3a4.o \
   $(OBJDIR)/AudioController_2cdb5551.o \
+  $(OBJDIR)/Envelope_e091de3b.o \
   $(OBJDIR)/MidiController_f87aad08.o \
   $(OBJDIR)/SampleAudioSource_602b6bc6.o \
   $(OBJDIR)/Config_4a6afa38.o \
@@ -137,6 +138,11 @@ $(OBJDIR)/base64_1eb4a3a4.o: ../../base64/base64.cpp
 $(OBJDIR)/AudioController_2cdb5551.o: ../../echomesh/audio/AudioController.cpp
 	-@mkdir -p $(OBJDIR)
 	@echo "Compiling AudioController.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/Envelope_e091de3b.o: ../../echomesh/audio/Envelope.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling Envelope.cpp"
 	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
 
 $(OBJDIR)/MidiController_f87aad08.o: ../../echomesh/audio/MidiController.cpp
