Starting to get external audio commands.

--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -168,7 +168,7 @@ network:
     allow_reuse_address: true
     binary: ""
     buffer_size: 4096
-    debug: true
+    debug: false
     host_name: localhost
     input_file: ""
     pipe_stdin: true
